--- a/ZPG+Neural+Network+Interactive+Lab+Final.ipynb
+++ b/ZPG+Neural+Network+Interactive+Lab+Final.ipynb
@@ -11,20 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type your name here:Zach\n",
-      "Hello Zach!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input(\"Type your name here:\")\n",
     "print (\"Hello \" + name + \"!\")"
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type the corpus file name here:shakespeare_input.txt\n"
+      "Type the corpus file name here:shakespeare_input.txt\n",
+      "File seems to have loaded :) \n"
      ]
     }
    ],
@@ -141,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -318,7 +310,7 @@
     "# Visualizing Networks with TensorBoard (optional)\n",
     "\n",
     "\n",
-    "![alt text](https://www.tensorflow.org/versions/r0.12/images/graph_vis_animation.gif \"Tensorboard\")\n",
+    "![alt text](https://github.com/ZachPhillipsGary/TensorFlowNLPLab/blob/master/graph_vis_animation.gif?raw=true \"Tensorboard\")\n",
     "\n",
     "                                Figure 2: Exploring a Neural Network in TensorBoard\n",
     "                                        (source: http://tensorflow.org)\n",
